Updated UI and added Dropdown to select DES, TrippleDes and AES for encryption and decryption.
Changes also deployed

--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ input {
 .content {
   width: 26rem;
   margin-top: 2rem;
-  border: 2px dashed #8865c7;
+  border: 2px ridge  #8865c7;
   padding: 1rem 1rem;
   border-radius: 0.5rem;
 }
