--- a/src/App.css
+++ b/src/App.css
@@ -101,8 +101,8 @@ h1 {
 }
 
 .error {
-  background-color: #f44336;
-  color: white;
+  /* background-color: #f44336; */
+  color: #f44336;
   padding: 10px;
   border-radius: 4px;
   margin-bottom: 15px;
